# Project_airqualitymonitoring

./: .env.sample  .gitattributes  .gitignore  README.md  aqi.instructions.md  clear_auth.html  debug_scheduler.py  gunicorn.conf.py  list_query.md  logs.sh  pyproject.toml  readme_query.md  requirements-dev.txt  requirements.txt  restart.sh  status.sh  vietnam_air_quality_sample.json  workflow.ipynb
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
backup_dtb/: backup_data.py  rollback_data.py  scheduler.py
config/: disposable_domains.txt  locations.yaml
deploy/: DEPLOYMENT.md  QUICK_START.md  README-DEPLOY.md  README.md  air-quality-monitoring.service  deploy.sh  env  env.sample  gunicorn.conf.py  health-check.sh  health_check.sh  master.sh  nginx.conf  pre-check.sh  service.sh  start.sh  test-api.sh  universal-deploy.sh
docs/: api.md  aqicn_client_readme.md  architecture.md  backfill_readme.md  backup_data.md  backup_rollback_db.md  db_schema.md  db_setup.md  indexes.md  requirements-moscow-v1.md
ingest/: __init__.py  aqicn_client.py  backfill_station_reading.py  catchup.py  forecast_ingest.py  get_forecast_data.py  get_station_reading.py  get_vietnam_stations.py  import_vietnam_stations.py  mongo_utils.py  streaming.py  streaming_backup.py
scripts/: create_collections.py  create_indexes.py  deploy.sh  force_alert_by_inserting_reading.py  inspect_tar.py  migrate_favorites_to_users.py  run.sh  run_admin_test.ps1  run_monitor.py  service.sh  start.sh  test-api.sh
scripts_test/: clean_corrupted_data.py  fix_waqi_locations.py  query_sample.js  run_real_catchup.py  (+18 more)
(+157 files in other folders)
