[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-monitoring"
version = "1.0.0"
description = "Air Quality Monitoring System with OpenAQ Integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=2.3.0",
    "pymongo>=4.5.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "APScheduler>=3.10.0",
    "Flask-Mail>=0.9.1",
    "Flask-Limiter>=3.0.0",
    "Flask-Login>=0.6.0",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "Jinja2>=3.1.0",
    "Werkzeug>=2.3.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
